--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <div class="row">
             <div class="test col s4 m6 l12">test</div>
             <div class="test col s4 m7 l12">test</div>
-            <div class="test col s4 m8 l12">test</div>
+            <div class="test col s4 m8 l12">branch test</div>
         </div>
     </div>
 
 
 
     <nav class="nav-wraper">
-        
+
     </nav>
     
     <!-- Good to have scripts on the bottom. -->
