--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <title>Materilize css</title>
 </head>
 
+
+<style>
+    nav .badge{
+        position: relative;
+        top: 20px;
+        right:20px;
+    }
+</style>
+
 <body>
     <nav class="nav-wraper indigo">
         <div class="container">
@@ -21,7 +30,10 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="#" class="btn-floating indigo darken-4 z-depth-0">
+                    <i class="material-icons">notifications</i>
+                </a></li>
+                <li> <span class="badge white-text pink">5 new</span></li>
             </ul>
         </div>
     </nav>
